worked on some semantics and improved design