@@ -7,6 +7,7 @@ import org.springframework.stereotype.Service;
 
 import com.safewalk.dispatch_webapp.dto.TeamDto;
 import com.safewalk.dispatch_webapp.entity.Team;
+import com.safewalk.dispatch_webapp.exception.ResourceNotFoundException;
 import com.safewalk.dispatch_webapp.mapper.TeamMapper;
 import com.safewalk.dispatch_webapp.repository.TeamRepository;
 import com.safewalk.dispatch_webapp.service.TeamService;
@@ -20,25 +21,18 @@ public class TeamServiceImpl implements TeamService {
 
     @Override
     public List<TeamDto> getTeams() {
-        List<Team> teams = teamRepository.findAll();
-        return teams.stream().map(TeamMapper::mapToTeamDto).collect(Collectors.toList());
+        return teamRepository.findAll()
+            .stream()
+            .map(TeamMapper::mapToTeamDto)
+            .toList();
     }
 
     @Override
-    public TeamDto createTeam(TeamDto teamDto) {
-        Team team = TeamMapper.mapToTeam(teamDto);
-        if (team == null) {
-            throw new RuntimeException("Mapping unsuccessful");
-        }
-        Team savedTeam = teamRepository.save(team);
-        return TeamMapper.mapToTeamDto(savedTeam);
-    }
-
-    @Override
-    public void deleteTeam(String team) {
-        Team teamToDelete = teamRepository.findByTeamColour(team)
-            .orElseThrow(() -> new RuntimeException("Team not found"));
-        teamToDelete.setActive(false);
-        teamRepository.save(teamToDelete);
+    public TeamDto setTeamActive(String teamColour, boolean active) {
+        Team team = teamRepository.findByTeamColour(teamColour)
+            .orElseThrow(() -> new ResourceNotFoundException("Team not found with colour: " + teamColour));
+        team.setActive(active);
+        Team updatedTeam = teamRepository.save(team);
+        return TeamMapper.mapToTeamDto(updatedTeam);
     }
 }
